# AI_recruit_consult_platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth.py  002_client_management.py  003_job_requirements.py  004_candidate_pipeline.py  005_tenant_settings.py
backend/app/: main.py
backend/app/config/: ai_providers.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  encryption.py  exceptions.py  logging.py  security.py
backend/app/data/: resume_templates.py
backend/app/middleware/: exception_handler.py  request_logging.py
backend/app/models/: __init__.py  audit_log.py  base.py  candidate.py  client.py  job_requirement.py  refresh_token.py  role.py  tenant.py  tenant_settings.py  user.py
backend/app/prompts/: interview.py  resume.py
backend/app/providers/: base.py  factory.py  mock_provider.py  openai_provider.py  registry.py
backend/app/repositories/: audit_log_repository.py  base.py  candidate_repository.py  client_repository.py  job_requirement_repository.py  refresh_token_repository.py  role_repository.py  tenant_repository.py  tenant_settings_repository.py  user_repository.py
backend/app/schemas/: auth.py  candidate.py  client.py  dashboard.py  job_requirement.py  resume_template.py  settings.py
backend/app/services/: audit_service.py  auth_service.py  candidate_pipeline_service.py  client_service.py  dashboard_service.py  interview_flow.py  job_requirement_service.py  (+5 more)
backend/tests/: conftest.py
(+99 files in other folders)
